# OpenMultiMeter

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
include/embedonix/omm/drivers/: ads8699.hpp  datafield_interface.hpp  device_register.hpp  register_interface.hpp
src/embedonix/omm/drivers/: ads8699.cpp
